app/src/main/java/com/example/einkaufslisteapp/Errors/ItemFieldError.java
package com.example.einkaufslisteapp.Errors;

public interface ItemFieldError {

    boolean isItemFieldValid();

    void toastMessage();

}
